--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   notification_permissions: ^0.6.1
   flutter_svg: ^0.17.3+1
   sqflite:
+  flutter_staggered_animations:
+  bottom_navy_bar: ^6.0.0
+  flutter_staggered_grid_view: ^0.4.0-nullsafety.3
+
+  babstrap_settings_screen: ^0.1.1
+
+
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +76,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - images/ii.jpg
+    - assets/images/ii.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
