--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   flutter_staggered_grid_view: ^0.4.0-nullsafety.3
   babstrap_settings_screen: ^0.1.1
-
+  wiredash: ^0.7.0+1
 
 
 dev_dependencies:
@@ -76,7 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/ii.jpg
-  #   - images/a_dot_ham.jpeg
+#     - assets/images/ii.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
